Bug 936670 - Position text rendered runs by the first non-trimmed character in the run. r=longsonr, a=lsblakk